# git-workset

./: AGENTS.md  Cargo.toml  README.md  RELEASING.md
.claude/skills/reflect/: SKILL.md
.github/workflows/: ci.yml  release.yml
Formula/: git-workset.rb
src/: config.rs  git.rs  main.rs
tests/: integration.rs
